<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/info_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_text"
        android:textSize="28dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/info_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/info_text1"
        android:textSize="38dp"
        android:gravity="center" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_text"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_gravity="right"
        android:layout_marginTop="6dp" />
    
</LinearLayout>