<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="12dp"
    tools:context="com.willbrom.forismaticquotes.MainActivity">

    <TextView
        android:id="@+id/quoteText_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/quote_text"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/quoteAuthor_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/quote_author"
        android:textStyle="bold"
        android:layout_marginTop="6dp"
        android:paddingLeft="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quoteText_textView" />

    <Button
        android:id="@+id/nextQuote_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_quote"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="onClickNextQuote"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
